--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "graphql": "^15.5.0",
     "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^0.0.0-experimental-696e736be",
+    "react-dom": "^0.0.0-experimental-696e736be",
     "react-relay": "^0.0.0-experimental-4c4107dd"
   },
   "devDependencies": {
